--- a/i18n/templates/2-index.html
+++ b/i18n/templates/2-index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{ get_locale() }}">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ _("Welcome to Holberton") }}</title>
+    <title>Welcome to Holberton</title>
 </head>
 <body>
-    <h1>{{ _("Hello world") }}</h1>
+    <h1>Hello world</h1>
 </body>
 </html>
